# Stimela-classic

./: .gitignore  .travis.yml  CHANGES.md  Dockerfile  Jenkinsfile.sh  MANIFEST.in  Makefile  README.md  README.rst  azishe.py  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: python-dependants.yml  python-package.yml  python-publish.yml
.travis/: mypy.docker  pep8.docker  py2.docker  py3.docker
Ares/autoflagger/: Dockerfile
Ares/autoflagger/src/: run.py
Ares/calibrator/: Dockerfile
Ares/calibrator/src/: pyxis-run.py  run.sh  tdlconf.profiles
Ares/flagms/: Dockerfile
Ares/flagms/src/: run.py
Ares/imager/: Dockerfile
Ares/imager/src/: pyxis-run.py
Ares/predict/: Dockerfile
Ares/simms/src/: decide.py  run.sh  simms_params.json
Ares/simulator/: Dockerfile
Ares/simulator/src/: pyxis-run.py
Ares/sourcery/: Dockerfile
Ares/sourcery/src/: run.py
Ares/subtract/: Dockerfile
Ares/subtract/src/: tdlconf.profiles
Otrera/: Container.py  otrera.py  utils.py
cargo/: __init__.py
cargo/base/casapy/: Dockerfile
cargo/base/imager/: Dockerfile
containers/autoflagger/: Dockerfile
containers/base/: Dockerfile
containers/calibrator/src/: pyxis-run.py
containers/casapy/: Dockerfile  apt.sources.list
containers/data/: Dockerfile
containers/imager/: Dockerfile  pyxis-run.py  run.sh
containers/imager/src/: pyxis-run.py  run.sh
containers/meqtrees/: Dockerfile
containers/meqtrees_cal/: pyxis-run.py  run.sh
containers/meqtrees_sim/: Dockerfile  pyxis-run.py  run.sh
containers/predict/: Dockerfile  pyxis-run.py  run.sh
containers/predict/src/: pyxis-run.py
containers/simms/: Dockerfile  run.sh  simms_params.json
containers/simms/data/: README.md
containers/simms/src/: fitsinfo.py  run.sh
containers/simulator/: Dockerfile  pyxis-run.py  run.sh
containers/simulator/src/: pyxis-run.py  run.sh  tdlconf.profiles
containers/sourcery/: Dockerfile
containers/sourcery/src/: run.py  sourcery_template.json
data/configs/: autoflagger_params.json  calibrator_params.json  flagms_params.json  imager_params.json  simms_params.json  simulator_params.json  subtract_params.json
data/skymodels/: COSMOS_NVSS_model.lsm.html
examples/: selfcal_pipeline.py  simulation_pipeline.py  simulation_pipeline_calibrate.py  simulation_pipeline_predict.py
examples/input/: tdlconf.profiles
input/: README.md  driver.json
input/configs/: README.md  driver.json  imager_params.json  simms_params.json  simulator_params.json
input/skymodels/: ECDFS_NVSS_model.lsm.html  XMM-LSS_NVSS_model-withdE.lsm.html  bright2deg.lsm.html  grill_bright2deg.lsm.html  scubed2deg.lsm.html
otrera/: __init__.py  penthesilea_docker.py  pipeliner.py
otrera/utils/: __init__.py  pyxis-utils.py
penthesilea/: __init__.py
penthesilea/ares/calibrator/: Dockerfile
penthesilea/ares/imager/: Dockerfile
penthesilea/ares/simms/: Dockerfile
penthesilea/ares/simulator/: Dockerfile
penthesilea/base/meqtrees/: Dockerfile
penthesilea/base/simms/: Dockerfile
penthesilea/base/sourcery/: Dockerfile
penthesilea/configs/: README.md  calibrator_params.json  imager_params.json  simms_params.json  simulator_params.json
src/: azishe.py  logger.py
stimela/: Recipe.py  RecipeCWL.py  RecipeStep.py  __init__.py  config.py  dismissable.py  docker.py  exceptions.py  main.py  pathformatter.py  pipeliner.py  podman.py  recipe.py  runner.py  singularity.py  stimela_docker.py  stimelogging.py  udocker.py  validate.py
stimela/backends/: __init__.py  docker.py  podman.py  singularity.py
stimela/cargo/: __init__.py
stimela/commands/: build.py  cabs.py  clean.py  containers.py  exxec.py  images.py  kill.py  ps.py  pull.py  push.py  run.py  save_config.py
stimela/configuratt/: __init__.py  demo.py  demo_omega.py  demo_omega2.py
stimela/kitchen/: recipe.py  runners.py  validate.py
stimela/tests/: proto_config_oms.py  test_cubical_recipe.yml  test_loop_recipe.yml  test_recipe.py  test_recipe.yml
stimela/utils/: __init__.py  logger.py  pyxis-utils.py  stimela2cwl.py  stimela_logger.py  xrun_livelog.py  xrun_poll.py
stimela_misc/: deploy.py  stimela-test-ngc417.py  version.py
(+462 files in other folders)
